--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,6 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0-rc3'
+        classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
